--- a/expense tracker.html
+++ b/expense tracker.html
@@ -9,11 +9,12 @@
     .box1 {
       height: auto;
       width: 550px;
-      border: 2px solid black;
+      border: 4px double black;
       margin: auto;
       background-color: lightgoldenrodyellow;
       padding: 15px;
       border-radius: 8px;
+      box-shadow: 2px 2px 1px 2px violet;
     }
     .title {
       font-size: 40px;
